# rl_gridworld

./: .gitignore  1dworld.py  2dworld.py  AGENTS.md  NEURAL_NETWORK_GUIDE.md  README.md  gridworld1d.py  gridworld2d.py  logWandB.py  main.ipynb  main.py  main_nn.py  nn.md  plots.py  pyproject.toml  q_agent.py  q_agent2D.py  q_agent_nn.py  requirements.txt  rewards.md  run.sh  test_modules.py  test_obstacles.py
.devcontainer/: devcontainer.json
balance/: README.md  hardware.md  main_pendulum.py  pendulum.py  pid.py  recovery.py  tui.py
docs/: README.md  architecture.md  configs.md  development.md  environment.md  future-todo.md  nn.md  rewards.md  tabular.md  wandb.md
myenv/: pyvenv.cfg
plans/: balance.md
