[project]
name = "rl-gridworld"
version = "0.1.0"
description = "Reinforcement Learning Grid World Environment"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.4",
    "matplotlib>=3.9.4",
    "pandas>=2.3.0",
    "rich>=14.0.0",
    "wandb>=0.19.11",
    "networkx>=3.5",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "PyYAML>=6.0.2",
    "pydantic>=2.11.4",
    "protobuf>=6.31.0",
    "psutil>=7.0.0",
    "sympy>=1.14.0",
    "GitPython>=3.1.44",
    "sentry-sdk>=2.28.0",
    "setproctitle>=1.3.6",
    "contourpy>=1.3.0",
    "cycler>=0.12.1",
    "fonttools>=4.58.0",
    "kiwisolver>=1.4.7",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "tzdata>=2025.2",
    "urllib3>=1.26.20",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.2",
    "idna>=3.10",
    "click>=8.1.8",
    "docker-pycreds>=0.4.0",
    "eval-type-backport>=0.2.2",
    "filelock>=3.18.0",
    "fsspec>=2025.7.0",
    "gitdb>=4.0.12",
    "importlib-resources>=6.5.2",
    "Jinja2>=3.1.6",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.2",
    "mdurl>=0.1.2",
    "mpmath>=1.3.0",
    "packaging>=25.0",
    "platformdirs>=4.3.8",
    "pydantic-core>=2.33.2",
    "Pygments>=2.19.1",
    "typing-inspection>=0.4.0",
    "typing-extensions>=4.13.2",
    "zipp>=3.21.0",
    "annotated-types>=0.7.0",
    "smmap>=5.0.2",
]

[tool.uv]
dev-dependencies = []
